[gd_scene load_steps=8 format=1]

[ext_resource path="res://object/upgrade_auto.gd" type="Script" id=1]
[ext_resource path="res://object/upgrade_cat.png" type="Texture" id=2]
[ext_resource path="res://object/upgrade_unit.tscn" type="PackedScene" id=3]
[ext_resource path="res://object/unit_mouse.png" type="Texture" id=4]
[ext_resource path="res://resource/NanumBarunpenR.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]

font/size = 22
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="Animation" id=1]

resource/name = "money_animation"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("icons:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.6 ),
"transitions": FloatArray( 0.554785, 1.86607, 0.25 ),
"update": 0,
"values": [ Vector2( 400, 0 ), Vector2( 400, -50 ), Vector2( 400, 0 ) ]
}

[node name="upgrade_auto" type="Control"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 500, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 524.0
margin/bottom = 500.0
script/script = ExtResource( 1 )
power_formatter = "POW %d"

[node name="bgpanel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 100.0

[node name="icons" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 100.0
custom_constants/separation = -90
alignment = 0

[node name="icon" type="TextureFrame" parent="icons"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="powers" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 100.0

[node name="count_up" parent="powers" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
margin/bottom = 0.0
level = 0
cost = 100.0
power = 0.0
power_formatter = "x %.2f"
cost_multiply = 2.2

[node name="upgrade_button" parent="powers/count_up"]

text = "갯수 증가"

[node name="power_up" parent="powers" instance=ExtResource( 3 )]

anchor/right = 1
anchor/bottom = 1
margin/left = 200.0
margin/right = 0.0
margin/bottom = 0.0
cost_multiply = 1.5
power_add = 0.5

[node name="upgrade_button" parent="powers/power_up"]

text = "파워업"

[node name="icon" type="TextureFrame" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="total_power" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 1.0
margin/right = 600.0
margin/bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "123"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="money_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="animation_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/money_animation = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="timeout" from="money_timer" to="." method="_timer_for_money"]


[editable path="powers/count_up"]
[editable path="powers/power_up"]
